--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,38 @@
 {
-    "name": "[TEMPLATE]",
-    "short_name": "[TEMPLATE]",
+    "name": "Shadow Legends",
+    "short_name": "Shadow Legends",
     "start_url": "https://",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#222222",
     "theme_color": "#ffffff",
-    "description": "[TEMPLATE]",
+    "description": "Legends in Shadows.",
     "icons": [
       {
-        "src": "/images/512img.png",
-        "sizes": "512x512",
-        "type": "image/png"
+        "src": "/images/icons/icon192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+		"purpose":"any maskable"
       },
       {
-        "src": "/images/favicon.ico",
-        "sizes": "256x256",
-        "type": "image/ico"
-      },
-      {
-        "src": "/images/256img.png",
+        "src": "/images/icons/icon256.png",
         "sizes": "256x256",
         "type": "image/png",
-        "purpose": "maskable"
+		"purpose":"any maskable"
+      },
+      {
+        "src": "/images/icons/icon384.png",
+        "sizes": "384x384",
+        "type": "image/png",
+		"purpose":"any maskable"
+      },
+      {
+        "src": "/images/icons/icon512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+		"purpose":"any maskable"
       }
     ],
+    
     "related_applications": [
       {
         "platform": "play",
