--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,25 +11,25 @@
         "src": "/images/icons/icon192.png",
         "sizes": "192x192",
         "type": "image/png",
-		"purpose":"any maskable"
+		    "purpose":"any"
       },
       {
         "src": "/images/icons/icon256.png",
         "sizes": "256x256",
         "type": "image/png",
-		"purpose":"any maskable"
+		    "purpose":"any maskable"
       },
       {
         "src": "/images/icons/icon384.png",
         "sizes": "384x384",
         "type": "image/png",
-		"purpose":"any maskable"
+		    "purpose":"any maskable"
       },
       {
         "src": "/images/icons/icon512.png",
         "sizes": "512x512",
         "type": "image/png",
-		"purpose":"any maskable"
+		    "purpose":"any maskable"
       }
     ],
 
